Refactor core logic, bump deps, new readme, license headers